[metadata]
# This is required for any package to install with a name
name = ADAM
author = Noah Walton
author_email = nwalton1@vols.utk.edu
# This is useful but not required
version = 1.0.1
description = ADAM Gradient Descent Algorithm for optimizing nuclear systems.
long_description = file: README.rst, LICENSE.rst
keywords = one, two
license = GNU GENERAL PUBLIC LICENSE V3

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
python_requires = >=3.7, <4
include_package_data = True
install_requires = 
    pandas
    numpy

packages=find:

# [options.packages.find]
# include = ADAM*